Closed Bug 1719146 Opened 3 years ago Closed 3 years ago

Compile error with newer linux kernel.

Categories

(Toolkit :: Crash Reporting, defect)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox91 --- fixed

People

(Reporter: emilio, Assigned: emilio)

Details

Attachments

(1 file)

On a Fedora Rawhide machine:

 0:03.49 /home/emilio/src/moz/gecko-2/toolkit/crashreporter/breakpad-client/linux/handler/exception_handler.cc:151:41: error: no matching function for call to 'max'
 0:03.49   static const unsigned kSigStackSize = std::max(16384, SIGSTKSZ);
 0:03.49                                         ^~~~~~~~
 0:03.49 /usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/bits/algorithmfwd.h:407:5: note: candidate template ignored: deduced conflicting types for parameter '_Tp' ('int' vs. 'long')
 0:03.49     max(const _Tp&, const _Tp&);
 0:03.49     ^
 0:03.49 /usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/bits/stl_algo.h:3467:5: note: candidate template ignored: could not match 'initializer_list<type-parameter-0-0>' against 'int'
 0:03.49     max(initializer_list<_Tp> __l, _Compare __comp)
 0:03.49     ^
 0:03.49 /usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/bits/stl_algo.h:3461:5: note: candidate function template not viable: requires single argument '__l', but 2 arguments were provided
 0:03.49     max(initializer_list<_Tp> __l)
 0:03.49     ^
 0:03.49 /usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/bits/algorithmfwd.h:412:5: note: candidate function template not viable: requires 3 arguments, but 2 were provided
 0:03.49     max(const _Tp&, const _Tp&, _Compare);
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/01d1b354a1fa
Use size_t in breakpad's Linux exception handler. r=gsvelto
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: