Bug 1719146 - Use size_t in breakpad's Linux exception handler. r=gsvelto

Differential Revision: https://phabricator.services.mozilla.com/D119083